feat: improved embedded cli api and new make shortcut for building embedded pipeline for saveasdaisy